--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@ To done my operation
 It is the course of Devops
 email:-giriprasadbandaru44@gmail.com
 passwd:- giriprasadbandaru80944
+email:- bandarugiriprasad25@gmail.com
+passwd:- giripowerfull13626
+email:- giripowerfull13626@gmail.com
+passwd:- bandarugiriprasad25
